--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,21 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+[build.environment]
+  NODE_VERSION = "18" 
+  "NEXT_PUBLIC_API_URL = "http://localhost:3000/api"
+
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [functions]
   directory = "netlify/functions"
-
-[dev]
-  command = "npm run dev"
-  port = 3000
-  publish = ".next"
